--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,15 @@
 ---
 import LogoAula from "./LogoAula.astro";
+import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
+import { faArrowLeft } from "@fortawesome/free-solid-svg-icons";
 ---
 
 <header class="bg-gradient-to-b from-[#14272a] to-transparent w-screen h-20 fixed z-50">
-  <div class="flex items-center h-full justify-center gap-10">
-    <ul class="flex gap-5 text-slate-300">
+  <div class="flex items-center h-full justify-between px-6 relative">
+    <a href="javascript:history.back()" class="absolute top-1/2 left-4 text-slate-300 hover:text-main transition-all duration-300 text-3xl sm:text-4xl md:text-5xl lg:text-6xl transform -translate-y-1/2">
+      <FontAwesomeIcon icon={faArrowLeft} className="size-6" />
+    </a>
+    <ul class="flex gap-5 text-slate-300 justify-center w-full">
       <li>
         <a href="/" class="flex items-center">
           <LogoAula />
