--- a/src/pages/aula.astro
+++ b/src/pages/aula.astro
@@ -35,7 +35,7 @@ import Layout from "../layouts/Layout.astro";
             >
               <li>
                 <a
-                  href="#"
+                  href="/talleres"
                   class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300"
                   aria-label="Ir a Talleres"
                 >
@@ -44,7 +44,7 @@ import Layout from "../layouts/Layout.astro";
               </li>
               <li>
                 <a
-                  href="#"
+                  href="/proyectos"
                   class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300"
                   aria-label="Ir a Proyectos"
                 >
@@ -53,7 +53,7 @@ import Layout from "../layouts/Layout.astro";
               </li>
               <li>
                 <a
-                  href="#"
+                  href="/eventos"
                   class="block rounded-lg hover:bg-[#1d363a] p-4 transition-all duration-300"
                   aria-label="Suscríbete"
                 >
