--- a/src/pages/eventos.astro
+++ b/src/pages/eventos.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <Layout title="Aula Software Libre - Proyectos">
+  <Layout title="Aula Software Libre - Eventos">
     <section
       class="flex flex-col items-center h-screen justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-hero-gradient bg-center bg-cover bg-clip-padding"
       aria-labelledby="main-title"
