nuevos componentes y arreglos

--- a/src/components/Btn.astro
+++ b/src/components/Btn.astro
@@ -3,8 +3,7 @@ interface Props {
 	text: string;
   href: string;
 }
-const { text } = Astro.props
-const { href } = Astro.props
+const { text, href } = Astro.props
 ---
 
 
