--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,7 +12,7 @@ import LogoAula from "../components/LogoAula.astro";
 </head>
 <body class="bg-hero-gradient h-screen w-screen flex justify-center items-center">
   <div class="grid gap-6 px-6 text-center">
-    <h1 id="title404" class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl text-white font-extrabold leading-tight">
+    <h1 id="title404" class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold leading-tight">
       <span class="text-main">ERROR 404</span>
     </h1>
 
