pagina de proyectos finalizada

--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -18,11 +18,11 @@ import ProjectComponent from "../components/ProjectComponent.jsx";
       >
         <section class="min-h-full w-full scroll-mt-24 text-center mb-20">
           <h1 class="text-center text-5xl p-8">
-            <span class="important-text text-white">Nuestros</span>
-            <span class="important-text text-main">proyectos</span>
+            <span class="important-text text-white">Proyectos</span>
+            <span class="important-text text-main">activos</span>
           </h1>
 
-          <div class="flex flex-wrap justify-center m-10 gap-5">
+          <div class="flex flex-wrap justify-center m-10 gap-5 lg:max-w-[70%] mx-auto ">
             <ProjectComponent
               client:load
               altText="App luna img"
@@ -58,56 +58,56 @@ import ProjectComponent from "../components/ProjectComponent.jsx";
             />
             <ProjectComponent
               client:load
-              altText="Ciberseguridad img"
-              imgSrc="/ciberseguridad.avif"
-              projectTitle="Ciberseguridad"
+              altText="Servidor img"
+              imgSrc="/servidor.avif"
+              projectTitle="Servidor Aula"
               estado="Abierto - A iniciar"
-              participantes="1 - 5"
-              description="Proyecto de ciberseguridad con los compañeros de ASIR, cuyo objetivo es la práctica de ataque/defensa a un servidor."
+              participantes="5 (Ampliable)"
+              description="Proyecto de creación del servidor principal del Aula de Software Libre, donde podremos desplegar y administrar los proyectos del aula."
               urlForm=""
               isFull={false}
             />
             <ProjectComponent
               client:load
-              altText="Ciberseguridad img"
-              imgSrc="/ciberseguridad.avif"
-              projectTitle="Ciberseguridad"
+              altText="Gestor proyectos img"
+              imgSrc="/gestorproyectos.avif"
+              projectTitle="Gestor de proyectos"
               estado="Abierto - A iniciar"
-              participantes="1 - 5"
-              description="Proyecto de ciberseguridad con los compañeros de ASIR, cuyo objetivo es la práctica de ataque/defensa a un servidor."
+              participantes="2- 3 (Ampliable)"
+              description="Aplicación fullstack para poder facilitarnos la vida a los desarrolladores a la hora de gestionar nuestros proyectos."
               urlForm=""
               isFull={false}
             />
             <ProjectComponent
               client:load
-              altText="Ciberseguridad img"
-              imgSrc="/ciberseguridad.avif"
-              projectTitle="Ciberseguridad"
+              altText="Web aula img"
+              imgSrc="/web.avif"
+              projectTitle="Web del aula"
+              estado="Cerrado - En progreso"
+              participantes="2"
+              description="Web oficial del Aula de Software Libre de la FP de Córdoba."
+              urlForm=""
+              isFull={true}
+            />
+            <ProjectComponent
+              client:load
+              altText="App dibujo img"
+              imgSrc="/appdibujo.avif"
+              projectTitle="App dibujo"
               estado="Abierto - A iniciar"
-              participantes="1 - 5"
-              description="Proyecto de ciberseguridad con los compañeros de ASIR, cuyo objetivo es la práctica de ataque/defensa a un servidor."
+              participantes="2 (Ampliable)"
+              description="Aplicación sencilla de dibujo, tipo Paint o pinturillo."
               urlForm=""
               isFull={false}
             />
             <ProjectComponent
               client:load
-              altText="Ciberseguridad img"
-              imgSrc="/ciberseguridad.avif"
-              projectTitle="Ciberseguridad"
+              altText="App movil juegos img"
+              imgSrc="/appmoviljuegos.avif"
+              projectTitle="Aplicación nativa juegos"
               estado="Abierto - A iniciar"
-              participantes="1 - 5"
-              description="Proyecto de ciberseguridad con los compañeros de ASIR, cuyo objetivo es la práctica de ataque/defensa a un servidor."
-              urlForm=""
-              isFull={false}
-            />
-            <ProjectComponent
-              client:load
-              altText="Ciberseguridad img"
-              imgSrc="/ciberseguridad.avif"
-              projectTitle="Ciberseguridad"
-              estado="Abierto - A iniciar"
-              participantes="1 - 5"
-              description="Proyecto de ciberseguridad con los compañeros de ASIR, cuyo objetivo es la práctica de ataque/defensa a un servidor."
+              participantes="1 - 3 (Ampliable)"
+              description="Aplicación móvil nativa donde podrás crear nostálgicas experiencias con juegos clásicos de siempre."
               urlForm=""
               isFull={false}
             />
