migracion componentes a jsx

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import {
 } from "@fortawesome/free-brands-svg-icons";
 import { faCode } from "@fortawesome/free-solid-svg-icons";
 import SocialLink from "./SocialLink.astro";
-import LogoAula from "./LogoAula.astro";
+import LogoAula from "./LogoAula";
 ---
 
 <footer class="bg-[#14272a] w-full h-[18rem] md:h-[18rem] text-base">
