--- a/src/components/PersonCard.astro
+++ b/src/components/PersonCard.astro
@@ -2,7 +2,7 @@
 const { imgSrc, altText, name } = Astro.props;
 ---
 
-<div class="relative bg-[#14272a] cursor-pointer text-white rounded-lg w-44 xl:w-52 h-60 xl:h-80 flex justify-center items-center group">
+<div class="relative bg-[#14272a] cursor-pointer text-white rounded-lg w-60 xl:w-60 h-80 md:w-44 md:h-60 xl:h-80 flex justify-center items-center group">
   <img
     src={imgSrc}
     alt={altText}
