--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
+import Header from '../components/Header';
 import "../styles/global.css";
 
 interface Props {
@@ -27,9 +27,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<Header/>
+		<Header client:load/>
 		<slot />
-
+		
 		<Footer/>
 	</body>
 </html>
