--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,42 +1,85 @@
 ---
 import Btn from "../components/Btn.astro";
 import Contacto from "../components/Contacto.astro";
+import PersonCard from "../components/PersonCard.astro";
 import Layout from "../layouts/Layout.astro";
+
+const teamMembers = [
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Alejandro Moral Bermejo" },
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Juan Deogracias Moya" },
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Ignacio de Loyola Díaz Jiménez" },
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Álvaro Fernández Amaro" },
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Francisco Bermejo Melero" },
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Manuel Torres Alcázar" },
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Adrián Cruz Barranco" },
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Daniel Acosta Castilla" },
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Óscar Muñoz Molinero" },
+  { imgSrc: "/person.avif", altText: "Foto integrante", name: "Francisco José Navarro Ruiz" },
+];
 ---
 
 <Layout title="Aula Software Libre - Inicio">
-  <section
-    class="min-h-screen flex flex-col justify-between pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-hero-gradient bg-center bg-cover"
-  >
-    <div
-      class="flex flex-col justify-center items-center flex-1 text-center px-4"
+  <main>
+    <section
+      class="min-h-screen flex flex-col justify-between pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-hero-gradient bg-center bg-cover"
     >
-      <h1
-        class="max-w-lg mx-auto font-bold text-4xl md:text-6xl xl:text-6xl text-white mb-4"
+      <div
+        class="flex flex-col justify-center items-center flex-1 text-center px-4"
       >
-        <span class="important-text text-white">Bienvenid@ al</span>
-        <span class="important-text text-main">Aula de Software Libre</span>
-      </h1>
-      <p
-        class="max-w-md mx-auto text-sm md:text-lg font-normal text-slate-300 mb-6"
-      >
-        Transformamos Ideas en Soluciones Abiertas, Fomentando el Conocimiento y
-        la Creatividad en Cada Proyecto.
-      </p>
+        <h1
+          class="max-w-lg mx-auto font-bold text-4xl md:text-6xl xl:text-6xl text-white mb-4"
+        >
+          <span class="important-text text-white">Bienvenid@ al</span>
+          <span class="important-text text-main">Aula de Software Libre</span>
+        </h1>
+        <p
+          class="max-w-md mx-auto text-sm md:text-lg font-normal text-slate-300 mb-6"
+        >
+          Transformamos Ideas en Soluciones Abiertas, Fomentando el Conocimiento
+          y la Creatividad en Cada Proyecto.
+        </p>
 
-      <Btn href="/register" text="Únete a nosotros" />
-    </div>
+        <Btn href="/register" text="Únete a nosotros" />
+      </div>
 
-    <div class="w-full flex justify-center mt-auto px-4">
-      <img
-        src="/photo.avif"
-        alt="Github Img"
-        width="800"
-        height="600"
-        class="rounded-t-3xl h-auto w-[95%] md:w-[70%] lg:w-[60%] xl:w-[50%] object-contain shadow-2xl"
-      />
-    </div>
-  </section>
+      <div class="w-full flex justify-center mt-auto px-4">
+        <img
+          src="/photo.avif"
+          alt="Github Img"
+          width="800"
+          height="600"
+          class="rounded-t-3xl h-auto w-[95%] md:w-[70%] lg:w-[60%] xl:w-[50%] object-contain shadow-2xl"
+        />
+      </div>
+    </section>
 
+    <section
+      class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[#172d30] bg-center bg-cover bg-clip-padding"
+      aria-labelledby="main-title"
+    >
+      <div class="mx-auto px-4 sm:px-6 lg:px-8 text-center">
+        <h1
+          id="main-title"
+          class="mx-auto font-bold text-4xl sm:text-5xl lg:text-6xl text-white mb-4 leading-tight"
+        >
+          <span class="important-text text-main">Nuestro</span>
+          <span class="important-text text-white">equipo</span>
+        </h1>
+
+        <section
+          id="equipo"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 xl:grid-cols-5 gap-6 mt-16 mb-32 justify-items-center"
+        >
+          {teamMembers.map((member) => (
+            <PersonCard
+              imgSrc={member.imgSrc}
+              altText={member.altText}
+              name={member.name}
+            />
+          ))}
+        </section>
+      </div>
+    </section>
+  </main>
   <Contacto />
 </Layout>
