--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -2,157 +2,156 @@
 import Layout from "../layouts/Layout.astro";
 import Btn from "../components/Btn.astro";
 import ProjectComponent from "../components/ProjectComponent.jsx";
+
+const projects = [
+  {
+    altText: "App luna img",
+    imgSrc: "/appluna.avif",
+    projectTitle: "App Luna",
+    estado: "Cerrado - Terminando...",
+    participantes: "5",
+    description: "Aplicación web para el Colegio Virgen del Carmen enfocada en luchar contra el acoso.",
+    urlForm: "",
+    isFull: true,
+  },
+  {
+    altText: "Mod minecraft img",
+    imgSrc: "/modMinecraft.avif",
+    projectTitle: "Mod Minecraft",
+    estado: "Cerrado - Iniciando...",
+    participantes: "5",
+    description: "Mod de minecraft creado en Java, para un servidor privado.",
+    urlForm: "",
+    isFull: true,
+  },
+  {
+    altText: "Ciberseguridad img",
+    imgSrc: "/ciberseguridad.avif",
+    projectTitle: "Ciberseguridad",
+    estado: "Abierto - A iniciar",
+    participantes: "1 - 5",
+    description: "Proyecto de ciberseguridad con los compañeros de ASIR, cuyo objetivo es la práctica de ataque/defensa a un servidor.",
+    urlForm: "",
+    isFull: false,
+  },
+  {
+    altText: "Servidor img",
+    imgSrc: "/servidor.avif",
+    projectTitle: "Servidor Aula",
+    estado: "Abierto - A iniciar",
+    participantes: "5 (Ampliable)",
+    description: "Proyecto de creación del servidor principal del Aula de Software Libre, donde podremos desplegar y administrar los proyectos del aula.",
+    urlForm: "",
+    isFull: false,
+  },
+  {
+    altText: "Gestor proyectos img",
+    imgSrc: "/gestorproyectos.avif",
+    projectTitle: "Gestor de proyectos",
+    estado: "Abierto - A iniciar",
+    participantes: "2- 3 (Ampliable)",
+    description: "Aplicación fullstack para poder facilitarnos la vida a los desarrolladores a la hora de gestionar nuestros proyectos.",
+    urlForm: "",
+    isFull: false,
+  },
+  {
+    altText: "Web aula img",
+    imgSrc: "/web.avif",
+    projectTitle: "Web del aula",
+    estado: "Cerrado - En progreso",
+    participantes: "2",
+    description: "Web oficial del Aula de Software Libre de la FP de Córdoba.",
+    urlForm: "",
+    isFull: true,
+  },
+  {
+    altText: "App dibujo img",
+    imgSrc: "/appdibujo.avif",
+    projectTitle: "App dibujo",
+    estado: "Abierto - A iniciar",
+    participantes: "2 (Ampliable)",
+    description: "Aplicación sencilla de dibujo, tipo Paint o pinturillo.",
+    urlForm: "",
+    isFull: false,
+  },
+  {
+    altText: "App movil juegos img",
+    imgSrc: "/appmoviljuegos.avif",
+    projectTitle: "Aplicación nativa juegos",
+    estado: "Abierto - A iniciar",
+    participantes: "1 - 3 (Ampliable)",
+    description: "Aplicación móvil nativa donde podrás crear nostálgicas experiencias con juegos clásicos de siempre.",
+    urlForm: "",
+    isFull: false,
+  },
+];
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    <Layout title="Aula Software Libre - Proyectos">
-      <main
-        class="flex flex-col items-center pt-24 md:pt-20 lg:pt-24 xl:pt-28 bg-hero-gradient bg-center bg-cover bg-clip-padding min-h-screen"
-        aria-labelledby="main-title"
+<Layout title="Aula Software Libre - Proyectos">
+  <main
+    class="flex flex-col items-center pt-24 md:pt-20 lg:pt-24 xl:pt-28 bg-hero-gradient bg-center bg-cover bg-clip-padding min-h-screen"
+    aria-labelledby="main-title"
+  >
+    <section class="min-h-full w-full scroll-mt-24 text-center mb-20">
+      <h1 class="text-center text-5xl p-8">
+        <span class="important-text text-white">Proyectos</span>
+        <span class="important-text text-main">activos</span>
+      </h1>
+
+      <div class="flex flex-wrap justify-center m-10 gap-5 lg:max-w-[70%] mx-auto ">
+        {projects.map((project) => (
+          <ProjectComponent
+            client:load
+            altText={project.altText}
+            imgSrc={project.imgSrc}
+            projectTitle={project.projectTitle}
+            estado={project.estado}
+            participantes={project.participantes}
+            description={project.description}
+            urlForm={project.urlForm}
+            isFull={project.isFull}
+          />
+        ))}
+      </div>
+
+      <span class="text-white"> Más proyectos próximamente... 🚀 </span>
+    </section>
+
+    <section
+      class="flex-grow w-full bg-[#14272a]/60 scroll-mt-24 flex flex-col items-center"
+    >
+      <div
+        class="container mx-auto flex flex-col md:flex-row items-center justify-between px-6 md:px-12 py-12 gap-8"
       >
-        <section class="min-h-full w-full scroll-mt-24 text-center mb-20">
-          <h1 class="text-center text-5xl p-8">
-            <span class="important-text text-white">Proyectos</span>
-            <span class="important-text text-main">activos</span>
+        <div class="flex flex-col md:w-1/2">
+          <h1 class="text-center text-5xl important-text text-white mb-4">
+            <span class="important-text text-white">¿Tienes una</span>
+            <span class="important-text text-main">idea de proyecto?</span>
           </h1>
-
-          <div class="flex flex-wrap justify-center m-10 gap-5 lg:max-w-[70%] mx-auto ">
-            <ProjectComponent
-              client:load
-              altText="App luna img"
-              imgSrc="/appluna.avif"
-              projectTitle="App Luna"
-              estado="Cerrado - Terminando..."
-              participantes="5"
-              description="Aplicación web para el Colegio Virgen del Carmen enfocada en luchar contra el acoso."
-              urlForm=""
-              isFull={true}
-            />
-            <ProjectComponent
-              client:load 
-              altText="Mod minecraft img"
-              imgSrc="/modMinecraft.avif"
-              projectTitle="Mod Minecraft"
-              estado="Cerrado - Iniciando..."
-              participantes="5"
-              description="Mod de minecraft creado en Java, para un servidor privado."
-              urlForm=""
-              isFull={true}
-            />
-            <ProjectComponent
-              client:load
-              altText="Ciberseguridad img"
-              imgSrc="/ciberseguridad.avif"
-              projectTitle="Ciberseguridad"
-              estado="Abierto - A iniciar"
-              participantes="1 - 5"
-              description="Proyecto de ciberseguridad con los compañeros de ASIR, cuyo objetivo es la práctica de ataque/defensa a un servidor."
-              urlForm=""
-              isFull={false}
-            />
-            <ProjectComponent
-              client:load
-              altText="Servidor img"
-              imgSrc="/servidor.avif"
-              projectTitle="Servidor Aula"
-              estado="Abierto - A iniciar"
-              participantes="5 (Ampliable)"
-              description="Proyecto de creación del servidor principal del Aula de Software Libre, donde podremos desplegar y administrar los proyectos del aula."
-              urlForm=""
-              isFull={false}
-            />
-            <ProjectComponent
-              client:load
-              altText="Gestor proyectos img"
-              imgSrc="/gestorproyectos.avif"
-              projectTitle="Gestor de proyectos"
-              estado="Abierto - A iniciar"
-              participantes="2- 3 (Ampliable)"
-              description="Aplicación fullstack para poder facilitarnos la vida a los desarrolladores a la hora de gestionar nuestros proyectos."
-              urlForm=""
-              isFull={false}
-            />
-            <ProjectComponent
-              client:load
-              altText="Web aula img"
-              imgSrc="/web.avif"
-              projectTitle="Web del aula"
-              estado="Cerrado - En progreso"
-              participantes="2"
-              description="Web oficial del Aula de Software Libre de la FP de Córdoba."
-              urlForm=""
-              isFull={true}
-            />
-            <ProjectComponent
-              client:load
-              altText="App dibujo img"
-              imgSrc="/appdibujo.avif"
-              projectTitle="App dibujo"
-              estado="Abierto - A iniciar"
-              participantes="2 (Ampliable)"
-              description="Aplicación sencilla de dibujo, tipo Paint o pinturillo."
-              urlForm=""
-              isFull={false}
-            />
-            <ProjectComponent
-              client:load
-              altText="App movil juegos img"
-              imgSrc="/appmoviljuegos.avif"
-              projectTitle="Aplicación nativa juegos"
-              estado="Abierto - A iniciar"
-              participantes="1 - 3 (Ampliable)"
-              description="Aplicación móvil nativa donde podrás crear nostálgicas experiencias con juegos clásicos de siempre."
-              urlForm=""
-              isFull={false}
-            />
-          </div>
-
-          <span class="text-white"> Más proyectos próximamente... 🚀 </span>
-        </section>
-
-        <section
-          class="flex-grow w-full bg-[#14272a]/60 scroll-mt-24 flex flex-col items-center"
-        >
-          <div
-            class="container mx-auto flex flex-col md:flex-row items-center justify-between px-6 md:px-12 py-12 gap-8"
+          <p
+            class="text-center max-w-[80%] mx-auto text-base text-slate-300"
           >
-            <div class="flex flex-col md:w-1/2">
-              <h1 class="text-center text-5xl important-text text-white mb-4">
-                <span class="important-text text-white">¿Tienes una</span>
-                <span class="important-text text-main">idea de proyecto?</span>
-              </h1>
-              <p
-                class="text-center max-w-[80%] mx-auto text-base text-slate-300"
-              >
-                Si tienes una idea innovadora que quieras desarrollar, ¡queremos
-                escucharla! Ayúdanos a construir proyectos que impacten
-                positivamente.
-              </p>
-            </div>
+            Si tienes una idea innovadora que quieras desarrollar, ¡queremos
+            escucharla! Ayúdanos a construir proyectos que impacten
+            positivamente.
+          </p>
+        </div>
 
-            <div class="flex flex-col items-center md:w-1/2">
-              <img
-                src="/QR.avif"
-                alt="qr formulario"
-                width="250"
-                height="250"
-                aria-label="qr"
-                class="border-4 border-white hover:scale-105 transition-all duration-300 hover:shadow-2xl mb-6"
-              />
-              <Btn
-                href="https://forms.gle/7pKa67M89ujBXsrc7"
-                text="Accede al formulario"
-              />
-            </div>
-          </div>
-        </section>
-      </main>
-    </Layout>
-  </body>
-</html>
+        <div class="flex flex-col items-center md:w-1/2">
+          <img
+            src="/QR.avif"
+            alt="qr formulario"
+            width="250"
+            height="250"
+            aria-label="qr"
+            class="border-4 border-white hover:scale-105 transition-all duration-300 hover:shadow-2xl mb-6"
+          />
+          <Btn
+            href="https://forms.gle/7pKa67M89ujBXsrc7"
+            text="Accede al formulario"
+          />
+        </div>
+      </div>
+    </section>
+  </main>
+</Layout>
