cambios en el header y arreglo de importaciones

--- a/src/pages/eventos.astro
+++ b/src/pages/eventos.astro
@@ -1,5 +1,5 @@
 ---
-import Btn from "../components/Btn.astro";
+import Btn from "../components/Btn";
 import LogoAula from "../components/LogoAula";
 import Layout from "../layouts/Layout.astro";
 ---
