--- a/src/pages/proyectos.astro
+++ b/src/pages/proyectos.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Btn from "../components/Btn.astro";
+import Btn from "../components/Btn.jsx";
 import ProjectComponent from "../components/ProjectComponent.jsx";
 
 const projects = [
