--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Footer from '../components/Footer.astro';
+import Footer from '../components/Footer';
 import Header from '../components/Header';
 import "../styles/global.css";
 
@@ -29,7 +29,7 @@ const { title } = Astro.props;
 	<body>
 		<Header client:load/>
 		<slot />
-		
+
 		<Footer/>
 	</body>
 </html>
