--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,49 +96,59 @@ const teamMembers = [
     </section>
 
     <section
-    class="max-w-full flex flex-col items-center justify-center pt-20 md:pt-24 lg:pt-28 xl:pt-20 bg-[#102022]"
-    aria-labelledby="main-title"
-    id="nosotros"
-  >
-    <h1 class="text-4xl sm:text-5xl lg:text-6xl text-main text-center">
-      <span class="important-text text-white">¿Quiénes</span>
-      <span class="important-text text-main">somos?</span>
-    </h1>
-  
-    <div class="grid lg:flex w-full mt-20 bg-[#091214]/40">
-      <img
-        src="/appluna.avif"
-        alt=""
-        class="w-full lg:w-[50%] object-cover"
-        width="700"
-        height="700"
-      />
-      <div class="grid w-full lg:w-[50%] text-white p-10 xl:p-0 text-justify mx-auto my-auto max-w-[90%] lg:max-w-[40%] pb-20 gap-8">
-        <div class="flex items-center gap-3 justify-center lg:justify-start">
-          <FontAwesomeIcon icon={faInfoCircle} className="hidden xl:flex size-5 text-main" />
-          <h2 class="text-3xl text-center lg:text-left xl:mt-0">
-            ¿Qué es el Aula de Software Libre?
-          </h2>
+      class="max-w-full flex flex-col items-center justify-center pt-20 md:pt-24 lg:pt-28 xl:pt-20 bg-[#102022]"
+      aria-labelledby="main-title"
+      id="nosotros"
+    >
+      <h1 class="text-4xl sm:text-5xl lg:text-6xl text-main text-center">
+        <span class="important-text text-white">¿Quiénes</span>
+        <span class="important-text text-main">somos?</span>
+      </h1>
+
+      <div class="grid lg:flex w-full mt-20 bg-[#091214]/40">
+        <img
+          src="/appluna.avif"
+          alt=""
+          class="w-full lg:w-[50%] object-cover"
+          width="700"
+          height="700"
+        />
+        <div
+          class="grid w-full lg:w-[50%] text-white p-10 xl:p-0 text-start mx-auto my-auto max-w-[90%] lg:max-w-[40%] pb-20 gap-8"
+        >
+          <div class="flex items-center gap-3 justify-center lg:justify-start">
+            <FontAwesomeIcon
+              icon={faInfoCircle}
+              className="hidden xl:flex size-5 text-main"
+            />
+            <h2 class="text-3xl text-center lg:text-left xl:mt-0">
+              ¿Qué es el Aula de Software Libre?
+            </h2>
+          </div>
+          <p>
+            El Aula de Software Libre de la FP de Córdoba representa una
+            oportunidad única de impulsar el aprendizaje tecnológico, fomentar
+            la innovación y preparar a nuestros estudiantes para el éxito en el
+            mundo laboral y el fomento de los valores del Software libre.
+            Nuestro objetivo es establecer un espacio equipado con tecnologías y
+            recursos necesarios para que
+            los estudiantes puedan explorar, aprender y desarrollar habilidades
+            en el ámbito del software libre. 
+            <br><br>
+            La finalidad del Aula de Software
+            Libre es ofrecer a nuestros estudiantes un entorno propicio para la
+            experimentación, la creatividad y el aprendizaje colaborativo.
+            Queremos impulsar el desarrollo de habilidades técnicas y el
+            pensamiento crítico, preparando a nuestros compañeros para enfrentar
+            los desafíos del mundo laboral con confianza y competencia. Dar la
+            posibilidad de aportar a los alumnos sus
+            habilidades,conocimientos,recursos e incluso contactos con un fin
+            altruista y constructivo en son de la mejora continua y apoyo entre
+            compañeros.
+          </p>
         </div>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          laborum at nobis exercitationem molestias voluptatum praesentium
-          ipsum, earum inventore velit veniam mollitia consectetur. Molestiae
-          ullam tempore tempora deserunt corporis illum.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          laborum at nobis exercitationem molestias voluptatum praesentium
-          ipsum, earum inventore velit veniam mollitia consectetur. Molestiae
-          ullam tempore tempora deserunt corporis illum.
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          laborum at nobis exercitationem molestias voluptatum praesentium
-          ipsum, earum inventore velit veniam mollitia consectetur. Molestiae
-          ullam tempore tempora deserunt corporis illum.
-        </p>
       </div>
-    </div>
-  </section>
-  
-  
+    </section>
 
     <section
       class="flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 bg-[#172d30] bg-center bg-cover bg-clip-padding"
