ayuda de recarga de imagenes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,6 +88,7 @@ const teamMembers = [
         <img
           src="/photo.avif"
           alt="Github Img"
+          loading="lazy"
           width="800"
           height="600"
           class="rounded-t-3xl h-auto w-[95%] md:w-[70%] lg:w-[60%] xl:w-[50%] object-contain shadow-2xl"
@@ -110,6 +111,7 @@ const teamMembers = [
           src="/appluna.avif"
           alt=""
           class="w-full lg:w-[50%] object-cover"
+          loading="lazy"
           width="700"
           height="700"
         />
@@ -182,3 +184,6 @@ const teamMembers = [
   </main>
   <Contacto />
 </Layout>
+
+
+
