--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,7 +1,9 @@
 ---
 import Layout from "../layouts/Layout.astro";
-
-const apiUrl = import.meta.env.ENDPOINT_LOGIN;
+import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
+import { faGithub } from "@fortawesome/free-brands-svg-icons";
+import { FcGoogle } from "react-icons/fc";
+// const apiUrl = import.meta.env.ENDPOINT_LOGIN;
 ---
 
 <Layout title="Aula Software Libre - Inicio de sesión">
@@ -12,7 +14,7 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
       class="flex-grow flex flex-col items-center justify-center pt-32 md:pt-24 lg:pt-28 xl:pt-32 mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-center"
     >
       <h1
-        class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-16 leading-tight "
+        class="max-w-lg mx-auto font-bold text-4xl md:text-5xl xl:text-6xl text-white mb-16 leading-tight"
       >
         <span class="important-text text-white">Inicio de </span>
         <span class="important-text text-main">sesión</span>
@@ -24,7 +26,7 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
         <div class="h-full">
           <div class="flex h-full flex-wrap items-center justify-center">
             <div class="w-full max-w-md">
-              <form id="login">
+              <div>
                 <div class="relative mb-6">
                   <input
                     name="username"
@@ -35,7 +37,7 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
                   />
                   <label
                     for="username"
-                    class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
+                    class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-white transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
                     >Nombre de usuario</label
                   >
                 </div>
@@ -50,18 +52,35 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
                   />
                   <label
                     for="password"
-                    class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
+                    class="pointer-events-none absolute left-3 top-0 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[2.15] text-white transition-all duration-200 ease-out peer-focus:-translate-y-[1.15rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-valid:-translate-y-[1.15rem] peer-valid:scale-[0.8] peer-valid:text-primary"
                     >Contraseña</label
                   >
                 </div>
 
-                <div class="text-center">
+                <div class="text-center grid gap-2">
                   <button
                     type="submit"
                     class="important-text hover:scale-105 ease-in-out inline-block w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-slate-800 shadow-primary-3 transition-all duration-300 bg-main hover:bg-[#a3af4a] hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
                   >
                     Iniciar sesión
                   </button>
+
+                  <button
+                    id="loginGithub"
+                    class="important-text hover:scale-105 items-center flex ease-in-out gap-2 justify-center w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-white shadow-primary-3 transition-all duration-300 bg-black hover:bg-slate-950 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
+                  >
+                    <FontAwesomeIcon icon={faGithub} className="size-4" />
+                    Iniciar sesión con Github
+                  </button>
+
+                  <button
+                    id="loginGoogle"
+                    class="important-text hover:scale-105 items-center flex ease-in-out gap-2 justify-center w-full rounded bg-primary px-7 pb-2 pt-3 text-sm font-medium uppercase leading-normal text-black shadow-primary-3 transition-all duration-300 bg-white hover:bg-slate-200 hover:shadow-primary-2 focus:bg-primary-accent-300 focus:shadow-primary-2 focus:outline-none focus:ring-0"
+                  >
+                    <FcGoogle className="size-4" />
+                    Iniciar sesión con Google
+                  </button>
+
                   <p class="text-slate-400 m-5 mb-11">
                     ¿No tienes una cuenta?
                     <a
@@ -72,7 +91,7 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
                     </a>
                   </p>
                 </div>
-              </form>
+              </div>
             </div>
           </div>
         </div>
@@ -91,103 +110,101 @@ const apiUrl = import.meta.env.ENDPOINT_LOGIN;
     </div>
   </div>
 
-  <script is:inline define:vars={{ apiUrl }}>
-    const formulario = document.getElementById("login");
-    const alertContainer = document.getElementById("alertContainer");
-    const alertMessage = document.getElementById("alertMessage");
-
-    function showAlert(message, isError = false) {
-      const alertClass = isError ? "error-alert" : "succsess-alert";
-      const iconColor = isError ? "text-[#d65563]" : "text-[#2b9875]";
-      const iconPath = isError
-        ? "M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"
-        : "m4.5 12.75 6 6 9-13.5";
-
-      alertMessage.innerHTML = `
-      ${
-        !isError
-          ? `
-    <div class="flex flex-row gap-2 mb-2 justify-center">
-      <div class="w-4 h-4 rounded-full bg-white animate-bounce [animation-delay:.3s]"></div>
-      <div class="w-4 h-4 rounded-full bg-white animate-bounce [animation-delay:.1s]"></div>
-      <div class="w-4 h-4 rounded-full bg-white animate-bounce [animation-delay:.2s]"></div>
-    </div>
-      `
-          : ""
-      }
-      <div class="${alertClass} cursor-default flex items-center justify-between w-full h-auto min-h-[4rem] rounded-lg bg-[#262768] px-[12px] py-[8px]">
-        <div class="flex gap-3 items-center">
-          <div class="${iconColor} bg-white/5 backdrop-blur-xl p-1.5 rounded-lg flex items-center justify-center">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7">
-              <path stroke-linecap="round" stroke-linejoin="round" d="${iconPath}"></path>
-            </svg>
-          </div>
-          <div class="flex-1">
-            <p class="text-white font-semibold">${isError ? "Error" : "Bienvenido"}</p>
-            <p class="text-gray-400">${message}</p>
-          </div>
-        </div>
-        <button class="text-gray-600 hover:bg-white/5 p-1.5 rounded-md transition-colors ease-linear flex items-center justify-center ml-2" onclick="document.getElementById('alertContainer').classList.add('hidden')">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12"></path>
-          </svg>
-        </button>
-      </div>
-    `;
-      alertContainer.classList.remove("hidden");
-    }
-
-    function clearForm() {
-      formulario.reset();
-    }
-
-    if (formulario) {
-      formulario.addEventListener("submit", async (e) => {
-        e.preventDefault();
-
-        const formData = new FormData(formulario);
-        const username = formData.get("username");
-        const password = formData.get("password");
-
-        try {
-          const response = await fetch(apiUrl, {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-              username,
-              password,
-              roleRequest: {
-                roleListName: ["USER"],
-              },
-            }),
-          });
-
-          if (response.ok) {
-            const data = await response.json();
-            console.log("Token JWT:", data.jwt);
-            localStorage.setItem("token", data.jwt);
-            localStorage.setItem("username", username);
-            showAlert("Bienvenido, redirigiendo a inicio...", false);
-            setTimeout(() => {
-              window.location.href = "/aula";
-            }, 500);
-          } else {
-            showAlert("Usuario o contraseña incorrecta", true);
-            clearForm();
-          }
-        } catch (error) {
-          console.error("Error:", error);
-          showAlert(
-            "Hubo un error al iniciar sesión. Por favor, inténtalo de nuevo.",
-            true
-          );
-          clearForm();
-        }
-      });
-    } else {
-      console.error("El formulario no se encontró en el DOM");
-    }
+  <script is="">
+    const { signIn } = await import("auth-astro/client");
+    document.querySelector("#loginGithub").onclick = () => signIn("github");
+    document.querySelector("#loginGoogle").onclick = () => signIn("google");
   </script>
+
+  <!-- // const formulario = document.getElementById("login"); // const
+  alertContainer = document.getElementById("alertContainer"); // const
+  alertMessage = document.getElementById("alertMessage"); // function
+  showAlert(message, isError = false) {
+    //   const alertClass = isError ? "error-alert" : "succsess-alert";
+    //   const iconColor = isError ? "text-[#d65563]" : "text-[#2b9875]";
+    //   const iconPath = isError
+    //     ? "M12 9v3.75m9-.75a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 3.75h.008v.008H12v-.008Z"
+    //     : "m4.5 12.75 6 6 9-13.5";
+    //   alertMessage.innerHTML = `
+    //   ${
+    //     !isError
+    //       ? `
+    // <div class="flex flex-row gap-2 mb-2 justify-center">
+    //   <div class="w-4 h-4 rounded-full bg-white animate-bounce [animation-delay:.3s]"></div>
+    //   <div class="w-4 h-4 rounded-full bg-white animate-bounce [animation-delay:.1s]"></div>
+    //   <div class="w-4 h-4 rounded-full bg-white animate-bounce [animation-delay:.2s]"></div>
+    // </div>
+    //   `
+    //       : ""
+    //   }
+    //   <div class="${alertClass} cursor-default flex items-center justify-between w-full h-auto min-h-[4rem] rounded-lg bg-[#262768] px-[12px] py-[8px]">
+    //     <div class="flex gap-3 items-center">
+    //       <div class="${iconColor} bg-white/5 backdrop-blur-xl p-1.5 rounded-lg flex items-center justify-center">
+    //         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7">
+    //           <path stroke-linecap="round" stroke-linejoin="round" d="${iconPath}"></path>
+    //         </svg>
+    //       </div>
+    //       <div class="flex-1">
+    //         <p class="text-white font-semibold">${isError ? "Error" : "Bienvenido"}</p>
+    //         <p class="text-gray-400">${message}</p>
+    //       </div>
+    //     </div>
+    //     <button class="text-gray-600 hover:bg-white/5 p-1.5 rounded-md transition-colors ease-linear flex items-center justify-center ml-2" onclick="document.getElementById('alertContainer').classList.add('hidden')">
+    //       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7">
+    //         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12"></path>
+    //       </svg>
+    //     </button>
+    //   </div>
+    // `;
+    //   alertContainer.classList.remove("hidden");
+    // }
+    // function clearForm() {
+    //   formulario.reset();
+    // }
+    // if (formulario) {
+    //   formulario.addEventListener("submit", async (e) => {
+    //     e.preventDefault();
+    //     const formData = new FormData(formulario);
+    //     const username = formData.get("username");
+    //     const password = formData.get("password");
+    //     try {
+    //       const response = await fetch(apiUrl, {
+    //         method: "POST",
+    //         headers: {
+    //           "Content-Type": "application/json",
+    //         },
+    //         body: JSON.stringify({
+    //           username,
+    //           password,
+    //           roleRequest: {
+    //             roleListName: ["USER"],
+    //           },
+    //         }),
+    //       });
+    //       if (response.ok) {
+    //         const data = await response.json();
+    //         console.log("Token JWT:", data.jwt);
+    //         localStorage.setItem("token", data.jwt);
+    //         localStorage.setItem("username", username);
+    //         showAlert("Bienvenido, redirigiendo a inicio...", false);
+    //         setTimeout(() => {
+    //           window.location.href = "/aula";
+    //         }, 500);
+    //       } else {
+    //         showAlert("Usuario o contraseña incorrecta", true);
+    //         clearForm();
+    //       }
+    //     } catch (error) {
+    //       console.error("Error:", error);
+    //       showAlert(
+    //         "Hubo un error al iniciar sesión. Por favor, inténtalo de nuevo.",
+    //         true
+    //       );
+    //       clearForm();
+    //     }
+    //   });
+    // } else {
+    //   console.error("El formulario no se encontró en el DOM");
+    // } -->
+  }
 </Layout>
