feat(logica de autentificacion y uso de la misma):

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,7 +80,7 @@ const teamMembers = [
         {
           session ? (
             <p class="max-w-md mx-auto text-sm md:text-lg font-normal text-slate-300 mb-6">
-              Bienvenido {session.user?.name}
+              ¡Bienvenido, {session.user?.name}!
             </p>
           ) : (
             <p class="max-w-md mx-auto text-sm md:text-lg font-normal text-slate-300 mb-6">
@@ -89,8 +89,31 @@ const teamMembers = [
             </p>
           )
         }
-
-        <Btn href="/login" text="Únete a nosotros" />
+        {
+          session ? (
+            <button
+              id="logout"
+              class="cursor-pointer w-auto mb-10 inline-flex items-center justify-center py-3 px-6 text-base font-semibold text-center text-slate-800 rounded-full bg-[#e6ff2b] shadow-xs hover:bg-[#a3af4a] hover:scale-105 transition-all duration-500"
+            >
+              Cerrar sesión
+              <svg
+                class="ml-2"
+                width="20"
+                height="20"
+                viewBox="0 0 20 20"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M7.5 15L11.0858 11.4142C11.7525 10.7475 12.0858 10.4142 12.0858 10C12.0858 9.58579 11.7525 9.25245 11.0858 8.58579L7.5 5"
+                  stroke="black"
+                />
+              </svg>
+            </button>
+          ) : (
+            <Btn href="/login" text="Únete a nosotros" />
+          )
+        }
       </div>
 
       <div class="w-full flex justify-center mt-auto px-4">
@@ -117,7 +140,7 @@ const teamMembers = [
 
       <div class="grid lg:flex w-full mt-20 bg-[#091214]/40">
         <img
-          src="/appluna.avif"
+          src="/foto.webp"
           alt=""
           class="w-full lg:w-[50%] object-cover"
           loading="lazy"
@@ -190,3 +213,8 @@ const teamMembers = [
   </main>
   <Contacto />
 </Layout>
+
+<script is="">
+  const { signOut } = await import("auth-astro/client");
+  document.querySelector("#logout").onclick = () => signOut();
+</script>
